---
source: payas-parser/src/builder/resolved_builder.rs
expression: normalized_system(&resolved)

---
- - Primitive: Boolean
  - Composite:
      name: Concert
      fields:
        - name: id
          typ:
            Plain: Int
          column_name: id
          is_pk: true
          is_autoincrement: true
          type_hint: ~
        - name: title
          typ:
            Plain: String
          column_name: title
          is_pk: false
          is_autoincrement: false
          type_hint: ~
        - name: public
          typ:
            Plain: Boolean
          column_name: public
          is_pk: false
          is_autoincrement: false
          type_hint: ~
      table_name: Concert
      access:
        creation:
          LogicalOp:
            Or:
              - RelationalOp:
                  Eq:
                    - FieldSelection:
                        Select:
                          - Single:
                              - - AuthContext
                              - Reference: AuthContext
                          - - role
                          - Reference: String
                    - StringLiteral:
                        - ROLE_ADMIN
                        - Primitive: String
                    - Primitive: Boolean
              - FieldSelection:
                  Select:
                    - Single:
                        - - self
                        - Reference: Concert
                    - - public
                    - Reference: Boolean
              - Primitive: Boolean
        read:
          LogicalOp:
            Or:
              - RelationalOp:
                  Eq:
                    - FieldSelection:
                        Select:
                          - Single:
                              - - AuthContext
                              - Reference: AuthContext
                          - - role
                          - Reference: String
                    - StringLiteral:
                        - ROLE_ADMIN
                        - Primitive: String
                    - Primitive: Boolean
              - FieldSelection:
                  Select:
                    - Single:
                        - - self
                        - Reference: Concert
                    - - public
                    - Reference: Boolean
              - Primitive: Boolean
        update:
          LogicalOp:
            Or:
              - RelationalOp:
                  Eq:
                    - FieldSelection:
                        Select:
                          - Single:
                              - - AuthContext
                              - Reference: AuthContext
                          - - role
                          - Reference: String
                    - StringLiteral:
                        - ROLE_ADMIN
                        - Primitive: String
                    - Primitive: Boolean
              - FieldSelection:
                  Select:
                    - Single:
                        - - self
                        - Reference: Concert
                    - - public
                    - Reference: Boolean
              - Primitive: Boolean
        delete:
          LogicalOp:
            Or:
              - RelationalOp:
                  Eq:
                    - FieldSelection:
                        Select:
                          - Single:
                              - - AuthContext
                              - Reference: AuthContext
                          - - role
                          - Reference: String
                    - StringLiteral:
                        - ROLE_ADMIN
                        - Primitive: String
                    - Primitive: Boolean
              - FieldSelection:
                  Select:
                    - Single:
                        - - self
                        - Reference: Concert
                    - - public
                    - Reference: Boolean
              - Primitive: Boolean
  - Primitive: Instant
  - Primitive: Int
  - Primitive: Json
  - Primitive: LocalDate
  - Primitive: LocalDateTime
  - Primitive: LocalTime
  - Primitive: String
- - name: AuthContext
    fields:
      - name: role
        typ:
          Plain: String
        source:
          Jwt:
            claim: role

